# rules_vcpkg_externals

./: .bazelrc  .user.bazlerc  BUILD.autoconf.bazel  BUILD.automake.bazel  BUILD.bazel  MODULE.bazel  README.md  bazel_downloader.cfg  postprocess_autoconf.bzl  postprocess_autoconf.py
.github/workflows/: publish.yml
patches/: autoconf.patch  automake.patch  gettext.patch  libtool.patch  rules_bison.patch  rules_foreign_cc.patch  sed.patch
rules/: BUILD.bazel  install_zips.bzl  postprocess_auto_stuff.bzl  postprocess_auto_stuff.py
scripts/: BUILD.bazel  ar_wrapper.sh
