load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "pkg_attributes")
load("@rules_pkg//pkg/private/zip:zip.bzl", "pkg_zip")

load("//rules:install_zips.bzl", "install_zips")
load("//rules:postprocess_auto_stuff.bzl", "postprocess_auto_stuff")

pkg_files(
    name = "m4_files",
    srcs = ["@m4//bin:m4"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "bin/",
)

pkg_zip(
    name = "m4_zip",
    srcs = [":m4_files"],
    out = "m4.zip",
)

genrule(
    name = "copy_make_bin",
    srcs = [ "@rules_foreign_cc//toolchains/private:make_tool" ],
    outs = [ "make" ],
    cmd = "cp $(location @rules_foreign_cc//toolchains/private:make_tool)/bin/make $@",
)

pkg_files(
    name = "make_files",
    srcs = [":copy_make_bin"],
    prefix = "bin/",
)

pkg_zip(
    name = "make_zip",
    srcs = [":make_files"],
    out = "make.zip",
)

postprocess_auto_stuff(
    name = "postprocess_autoconf",
    srcs = "@autoconf//:autoconf",
    prefix = "autoconf",
    output = "autoconf",
    bin_postfixes = {
        "autoconf.build_tmpdir/autoconf": "__BIN_DIR__/..",
    },
    visibility = ["@automake//:__pkg__"],
)

pkg_zip(
    name = "autoconf_zip",
    srcs = [":postprocess_autoconf"],
    out = "autoconf.zip",
)

postprocess_auto_stuff(
    name = "postprocess_automake",
    srcs = "@automake//:automake",
    prefix = "automake",
    output = "automake",
    bin_postfixes = {
        "automake.build_tmpdir/automake": "__BIN_DIR__/..",
        "bin/autoconf/bin/autoconf": "__BIN_DIR__/../../autoconf/bin/autoconf",
    },
)

pkg_zip(
    name = "automake_zip",
    srcs = [":postprocess_automake"],
    out = "automake.zip",
)

# pkg_zip(
#     name = "libtool_zip",
#     srcs = ["@libtool//:libtool"],
#     out = "libtool.zip",
# )

install_zips(
    name = "install_zips",
    zips = [
        ":m4_zip",
        ":make_zip",
        ":autoconf_zip",
        ":automake_zip",
    ],
)
