load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "pkg_attributes")
load("@rules_pkg//pkg/private/zip:zip.bzl", "pkg_zip")

load("//rules:install_zips.bzl", "install_zips")
load("//rules:postprocess_auto_stuff.bzl", "postprocess_auto_stuff")

pkg_files(
    name = "m4_files",
    srcs = ["@m4//bin:m4"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "bin/",
)

pkg_zip(
    name = "m4_zip",
    srcs = [":m4_files"],
    out = "m4.zip",
)

genrule(
    name = "copy_make_bin",
    srcs = [ "@rules_foreign_cc//toolchains/private:make_tool" ],
    outs = [ "make" ],
    cmd = " && ".join([
        "cp $(location @rules_foreign_cc//toolchains/private:make_tool)/bin/make $@",
    ]),
)

pkg_files(
    name = "make_files",
    srcs = [":copy_make_bin"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "bin/",
)

pkg_zip(
    name = "make_zip",
    srcs = [":make_files"],
    out = "make.zip",
)

postprocess_auto_stuff(
    name = "postprocess_autoconf",
    srcs = "@autoconf//:autoconf",
    output = "autoconf",
    bin_postfixes = {
        "autoconf.build_tmpdir/autoconf": "__BIN_DIR__/..",
    },
    replace_in_bin = {
        "/usr/bin/": "/usr/bin/env ",
    },
    visibility = ["@automake//:__pkg__"],
)

pkg_zip(
    name = "autoconf_zip",
    srcs = [":postprocess_autoconf"],
    out = "autoconf.zip",
)

postprocess_auto_stuff(
    name = "postprocess_automake",
    srcs = "@automake//:automake",
    output = "automake",
    bin_postfixes = {
        "automake.build_tmpdir/automake": "__BIN_DIR__/..",
        "bin/autoconf/bin/autoconf": "__BIN_DIR__/autoconf",
    },
    replace_in_bin = {
        "/usr/bin/": "/usr/bin/env" ,
    },
)

pkg_zip(
    name = "automake_zip",
    srcs = [":postprocess_automake"],
    out = "automake.zip",
)

postprocess_auto_stuff(
    name = "postprocess_libtool",
    srcs = "@libtool//:libtool",
    output = "libtool",
    bin_postfixes = {
        "bin/scripts/ar_wrapper": "\"/usr/bin/env ar",
        "llvm_toolchain/bin/cc_wrapper.sh": "\"/usr/bin/env clang",
        "toolchain_llvm/lib/clang/16 ": "\"",
        "libtool.build_tmpdir/install": "__BIN_DIR__/..",
    },
    replace_in_bin = {
        "/usr/bin/": "/usr/bin/env ",
        # "with_gcc=yes": "with_gcc=no",
    },
)

pkg_zip(
    name = "libtool_zip",
    srcs = [":postprocess_libtool"],
    out = "libtool.zip",
)

install_zips(
    name = "install_zips",
    zips = [
        ":m4_zip",
        ":make_zip",
        ":autoconf_zip",
        ":automake_zip",
        ":libtool_zip",
    ],
)
