load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")
load("@rules_pkg//pkg/private/zip:zip.bzl", "pkg_zip")
load("//rules:install_zips.bzl", "install_zips")
load("//rules:postprocess_auto_stuff.bzl", "postprocess_auto_stuff")

pkg_files(
    name = "m4_files",
    srcs = ["@m4//bin:m4"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "bin/",
)

pkg_zip(
    name = "m4_zip",
    srcs = [":m4_files"],
    out = "m4.zip",
)

pkg_files(
    name = "bison_files",
    srcs = ["@bison//bin:bison"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "bin/",
)

pkg_zip(
    name = "bison_zip",
    srcs = [":bison_files"],
    out = "bison.zip",
)

filegroup(
    name = "flex_bin",
    srcs = ["@flex"],
    output_group = "flex",
)

pkg_files(
    name = "flex_files",
    srcs = [":flex_bin"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "bin/",
)

pkg_zip(
    name = "flex_zip",
    srcs = [":flex_files"],
    out = "flex.zip",
)

genrule(
    name = "copy_make_bin",
    srcs = ["@rules_foreign_cc//toolchains/private:make_tool"],
    outs = ["make"],
    cmd = "cp $(location @rules_foreign_cc//toolchains/private:make_tool)/bin/make $@",
)

pkg_files(
    name = "make_files",
    srcs = [":copy_make_bin"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "bin/",
)

pkg_zip(
    name = "make_zip",
    srcs = [":make_files"],
    out = "make.zip",
)

postprocess_auto_stuff(
    name = "postprocess_autoconf",
    srcs = "@autoconf",
    bin_postfixes = {
        "autoconf.build_tmpdir/autoconf": "__BIN_DIR__/..",
    },
    output = "autoconf",
    replace_in_bin = {
        "/usr/bin/": "/usr/bin/env ",
    },
    visibility = ["@automake//:__pkg__"],
)

pkg_zip(
    name = "autoconf_zip",
    srcs = [":postprocess_autoconf"],
    out = "autoconf.zip",
)

postprocess_auto_stuff(
    name = "postprocess_automake",
    srcs = "@automake",
    bin_postfixes = {
        "automake.build_tmpdir/automake": "__BIN_DIR__/..",
        "bin/autoconf/bin/autoconf": "__BIN_DIR__/autoconf",
    },
    output = "automake",
    replace_in_bin = {
        "/usr/bin/": "/usr/bin/env",
    },
)

pkg_zip(
    name = "automake_zip",
    srcs = [":postprocess_automake"],
    out = "automake.zip",
)

postprocess_auto_stuff(
    name = "postprocess_libtool",
    srcs = "@libtool",
    bin_postfixes = {
        "bin/scripts/ar_wrapper": "\"/usr/bin/env ar",
        "llvm_toolchain/bin/cc_wrapper.sh": "\"/usr/bin/env clang",
        "toolchain_llvm/lib/clang/16 ": "\"",
        "libtool.build_tmpdir/install": "__BIN_DIR__/..",
    },
    output = "libtool",
    replace_in_bin = {
        "/usr/bin/": "/usr/bin/env ",
    },
)

pkg_zip(
    name = "libtool_zip",
    srcs = [":postprocess_libtool"],
    out = "libtool.zip",
)

pkg_zip(
    name = "pkgconfig_zip",
    srcs = ["@rules_foreign_cc//toolchains/private:pkgconfig_tool"],
    out = "pkgconfig.zip",
)

pkg_zip(
    name = "autoconf_archive_zip",
    srcs = ["@autoconf_archive"],
    out = "autoconf_archive.zip",
)

genrule(
    name = "copy_gsed_bin",
    srcs = ["@sed"],
    outs = ["gsed"],
    cmd = "cp $(location @sed//:sed) $@",
)

pkg_files(
    name = "gsed_files",
    srcs = [":copy_gsed_bin"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "bin/",
)

pkg_zip(
    name = "gsed_zip",
    srcs = [":gsed_files"],
    out = "gsed.zip",
)

install_zips(
    name = "install_zips",
    platform_suffix = select({
        "//platforms:linux_amd64": "linux.amd64",
        "//platforms:linux_arm64": "linux.arm64",
        "//platforms:macos_amd64": "macos.amd64",
        "//platforms:macos_arm64": "macos.arm64",
    }),
    zips = [
        ":m4_zip",
        ":bison_zip",
        ":flex_zip",
        ":make_zip",
        ":gsed_zip",
        ":autoconf_zip",
        ":automake_zip",
        ":libtool_zip",
        ":pkgconfig_zip",
        ":autoconf_archive_zip",
    ],
)
